--- a/Implementasi ke Web/index.html
+++ b/Implementasi ke Web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login Kopi Kenangan</title>
+        <title>Optimation Route Aplication</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -11,34 +11,16 @@
     <body>
         <section class="login">
 
-           <h1 class="text-center" style="font-family: 'Poppins', sans-serif; font-weight: bold; font-size: 2rem; font-style: italic;">Kopi<span>Kenangan</span></p></h1> 
+           <h1 class="text-center" style="font-family: 'Poppins', sans-serif; font-weight: bold; font-size: 2rem; font-style: italic;">Optimation Route Application</h1> 
 
-            <form class="needs-validation">
+            <form>
                 <div class="form-group was-validated">
-                    <label class="form-label" for="email">Email Address</label>
-                    <input class="form-control" type="email" id="email" required>
-                    <div class="invalid-feedback">
-                        Please enter your email address
-                    </div>
+                    <label class="form-label" for="num_locations">Number of Locations</label>
+                    <input class="form-control" type="number" id="num_locations" required>
                 </div>
 
-                <div class="form-group was-validated">
-                    <label class="form-label" for="password">Password</label>
-                    <input class="form-control" type="password" id="password" required>
-                    <div class="invalid-feedback">
-                        Please enter your password
-                    </div>
-                </div>
-
-                <div class="reset-password text-end">
-                    <a href="#">Reset Password</a>
-                </div>
-
-                <input class="btn btn-success w-100" type="submit" value="Sign in" id="signin">
+                <input class="btn btn-success w-100" type="submit" value="Enter" id="enter">
             </form>
-            <div class="register">
-                <p>Belum punya akun? <a href="signup.html">Daftar.</a></p>
-            </div>
         </section>
     </body>
 </html>
