--- a/Implementasi ke Web/index.html
+++ b/Implementasi ke Web/index.html
@@ -7,20 +7,29 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../Implementasi ke Web/index.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <script src="../Implementasi ke Web/index_modal.js"></script>
     </head>
     <body>
-        <section class="login">
+        <section class="num-locations">
 
            <h1 class="text-center" style="font-family: 'Poppins', sans-serif; font-weight: bold; font-size: 2rem; font-style: italic;">Optimation Route Application</h1> 
 
             <form>
                 <div class="form-group was-validated">
                     <label class="form-label" for="num_locations">Number of Locations</label>
-                    <input class="form-control" type="number" id="num_locations" required>
+                    <input class="form-control" type="number" id="num_locations" >
                 </div>
 
-                <input class="btn btn-success w-100" type="submit" value="Enter" id="enter">
+                <input class="btn btn-success w-100" type="submit" value="Enter" id="myBtn">
             </form>
         </section>
+
+        <div class="modal" id="myModal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+        </div>
+        
     </body>
 </html>
