--- a/Implementasi ke Web/tsp.html
+++ b/Implementasi ke Web/tsp.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../Implementasi ke Web/index.css">
+        <link rel="stylesheet" href="../Implementasi ke Web/tsp.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Poppins:wght@300&display=swap" rel="stylesheet">
-        <script src="../Implementasi ke Web/index_modal.js"></script>
+        <!-- <script src="../Implementasi ke Web/index_modal.js"></script> -->
     </head>
     <body>
         <section class="num-locations">
@@ -20,16 +20,8 @@
                     <input class="form-control" type="number" id="num_locations" >
                 </div>
 
-                <input class="btn btn-success w-100" type="submit" value="Enter" id="myBtn">
+                <input class="btn btn-success w-100" type="submit" value="Enter" id="myBtn" data-bs-toggle="modal" data-bs-target="#myModal">
             </form>
         </section>
-
-        <div class="modal" id="myModal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
-            </div>
-        </div>
-        
     </body>
 </html>
