--- a/Implementasi ke Web/index.html
+++ b/Implementasi ke Web/index.html
@@ -15,9 +15,9 @@
 
             <form>
                 <div class="btn-menu d-grid gap-2">
-                    <a href="tsp.html" class="btn btn-secondary" type="button">Traveling Salesperson</a>
-                    <a href="vrp.html" class="btn btn-secondary" type="button">Vehicle Routing Problem</a>
-                    <a href="capacity.html" class="btn btn-secondary" type="button">Capacity Constraint</a>
+                    <a href="../Implementasi ke Web/TSP/tsp.html" class="btn btn-success" type="button">Traveling Salesperson</a>
+                    <a href="../Implementasi ke Web/VRP/vrp.html" class="btn btn-success" type="button">Vehicle Routing Problem</a>
+                    <a href="../Implementasi ke Web/Capacity/capacity.html" class="btn btn-success" type="button">Capacity Constraint</a>
                 </div>
             </form>
             <div class="add-locations">
