--- a/Implementasi ke Web/TSP/tsp.html
+++ b/Implementasi ke Web/TSP/tsp.html
@@ -19,9 +19,9 @@
             <form>
                 <div class="form-group was-validated">
                     <label class="form-label" for="num_locations">Number of Locations</label>
-                    <input class="form-control" type="number" id="num_locations" required>
+                    <input class="form-control" type="number" name="num_locations" id="num_locations" required>
                 </div>
-                <input class="btn btn-success w-100" type="submit" value="Enter" id="myBtn">
+                <input class="btn btn-success w-100" type="submit" name="locations">
             </form>
             
         </section>
